name:               edit-distance
version:            0.2.2.1
cabal-version:      >=1.10
category:           Algorithms
synopsis:
  Levenshtein and restricted Damerau-Levenshtein edit distances

description:
  Optimized edit distances for fuzzy matching, including Levenshtein and restricted Damerau-Levenshtein algorithms.

license:            BSD3
license-file:       LICENSE
extra-source-files: README.md
author:             Max Bolingbroke <batterseapower@hotmail.com>
copyright:          (c) 2008-2013 Maximilian Bolinbroke
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           http://github.com/phadej/edit-distance
build-type:         Simple
tested-with:
  GHC ==8.6.3 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2

library
  default-language: Haskell98
  exposed-modules:  Text.EditDistance
  other-modules:
    Text.EditDistance.ArrayUtilities
    Text.EditDistance.Bits
    Text.EditDistance.EditCosts
    Text.EditDistance.MonadUtilities
    Text.EditDistance.STUArray
    Text.EditDistance.SquareSTUArray

  build-depends:
      array       >=0.1
    , base        >=4.5     && <5
    , containers  >=0.1.0.1
    , random      >=1.0

  ghc-options:      -Wall

test-suite edit-distance-tests
  default-language: Haskell98
  main-is:          Text/EditDistance/Tests.hs
  other-modules:
    Text.EditDistance.Tests.EditOperationOntology
    Text.EditDistance.Tests.Properties

  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  build-depends:
      array                       >=0.1
    , base                        >=4.5     && <5
    , containers                  >=0.1.0.1
    , QuickCheck                  >=2.4     && <2.13
    , random                      >=1.0
    , test-framework              >=0.1.1
    , test-framework-quickcheck2

benchmark edit-distance-benchmark
  default-language: Haskell98
  main-is:          Text/EditDistance/Benchmark.hs
  type:             exitcode-stdio-1.0
  build-depends:
      array       >=0.1
    , base        >=4.5     && <5
    , containers  >=0.1.0.1
    , criterion   >=1.1
    , deepseq     >=1.2
    , process     >=1.0
    , random      >=1.0
    , time        >=1.0
    , unix        >=2.3

  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/phadej/edit-distance.git
